# geocpp

./: .bazelrc  .clang-tidy  .gitignore  BUILD.bazel  LICENSE  MODULE.bazel  Makefile  README.md
.github/workflows/: build.yml
.topiary/: languages.ncl
adhoc/: data.json
compiled/: BUILD.bazel  README.md  dates.hpp
containers/: BUILD.bazel
defs/: BUILD.bazel  analysis.bzl  aspect_sources.bzl  oclint_aspect.bzl  release.bzl
patches/: BUILD.bazel  math.cc.sin.patch
sandbox/: dates.cc
src/apps/: BUILD.bazel  genheader.cc  greeter.cc  main.cc  math.cc  release_metadata.sh
src/geometry/: BUILD.bazel  circle.cc  circle.hpp  rectangle.cc
src/geometry/include/: rectangle.hpp
src/space/: BUILD.bazel  cartesian.cc
test/: defs.bzl
test/geometry/: BUILD.bazel  circle_gtest_test.cc  rectangle_catch2_test.cc  rectangle_gtest_test.cc
test/space/: BUILD.bazel  cartesian_py_test.py
tools/: BUILD.bazel  analyzer.sh  archiver.py  aspect.bzl  multitool.lock.json  run_oclint.sh  run_oclint_metadata.sh
tools/oclint/: BUILD.bazel  BUILD.bazel.gen
tools/yq/: BUILD.bazel  BUILD.bazel.gen
