load("@buildifier_prebuilt//:rules.bzl", "buildifier")
load("@gazelle//:def.bzl", "gazelle")
load("@rules_pkg//pkg/private/tar:tar.bzl", "pkg_tar")
load("@tar.bzl", "tar")

buildifier(
    name = "buildifier",
    lint_mode = "fix",
    mode = "fix",
)

gazelle(name = "gazelle")

genrule(
    name = "clang_format",
    srcs = ["@llvm_toolchain//:bin/clang-format"],
    outs = ["clang-format"],
    cmd = "cat $< > $@",
    executable = True,
)

# save a file into a .tar archive
pkg_tar(
    name = "archive",
    srcs = ["//:LICENSE"],
    # Use an "epoch" time for the modification time
    # of each file inside the archive.
    stamp = 0,
)

tar(
    name = "archive-lean",
    srcs = ["//:LICENSE"],
)
