module(
    name = "workspace",
    repo_name = "geocpp",
)

# Bazel specific
bazel_dep(name = "platforms", version = "0.0.11")
bazel_dep(name = "rules_cc", version = "0.1.1")
bazel_dep(name = "hermetic_cc_toolchain", version = "4.0.0")
bazel_dep(name = "bazel_skylib", version = "1.7.1")

# Third-party packages
bazel_dep(name = "googletest", version = "1.16.0")  # gtest
bazel_dep(name = "catch2", version = "3.8.1")

# Dev dependencies
bazel_dep(name = "gazelle", version = "0.42.0", dev_dependency = True)
bazel_dep(name = "buildifier_prebuilt", version = "8.0.3", dev_dependency = True)

# Add direct HTTP archive dependency on a library that is not built with Bazel
http_archive = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

# the archive file is going to be extracted at build time and the `build_file`
# is going to be placed at the output directory (bazel-geocpp/external/+_repo_rules+gcem)
http_archive(
    name = "gcem",
    build_file = "//third_party/gcem:BUILD.bazel.gen",
    sha256 = "8e71a9f5b62956da6c409dda44b483f98c4a98ae72184f3aa4659ae5b3462e61",
    strip_prefix = "gcem-1.18.0",
    urls = ["https://github.com/kthohr/gcem/archive/v1.18.0.tar.gz"],
)

toolchains = use_extension("@hermetic_cc_toolchain//toolchain:ext.bzl", "toolchains")

# cannot use this due to an error
# Error in remove: trying to mutate a frozen list value
# toolchains.exec_platform(
#     os = "linux",
#     arch = "amd64",
# )
use_repo(toolchains, "zig_sdk")

# do not register the toolchain here, but instead pass it on the command
# line using the `--extra_toolchains` flag
# register_toolchains(
#     "@zig_sdk//toolchain:linux_amd64_gnu.2.31",
# )
