load("@rules_cc//cc:cc_binary.bzl", "cc_binary")
load("@rules_shell//shell:sh_binary.bzl", "sh_binary")
load("//defs:release.bzl", "release_application")

package(default_visibility = ["//visibility:public"])

filegroup(
    name = "cc-sources",
    srcs = glob(["*.cc"]),
    tags = ["static-analysis"],
)

release_application(
    name = "release",
    srcs = ["main.cc"],
    deps = [
        "//compiled:libdates",
        "//src/geometry:rectangle",
    ],
)

sh_binary(
    name = "release_metadata",
    srcs = ["release_metadata.sh"],
)

cc_binary(
    name = "math",
    srcs = ["math.cc"],
    deps = [
        "@gcem",
    ],
)

cc_binary(
    name = "math-arm64",
    srcs = ["math.cc"],
    deps = [
        "@gcem",
    ],
)

cc_binary(
    name = "genheader",
    srcs = ["genheader.cc"],
    deps = [
        "//generated:header-generated-lib",
    ],
)
