load("@rules_cc//cc:cc_binary.bzl", "cc_binary")
load("@rules_shell//shell:sh_binary.bzl", "sh_binary")
load("//defs:release.bzl", "release_application")

package(default_visibility = ["//visibility:public"])

release_application(
    name = "release",
    srcs = ["main.cc"],
    deps = [
        "//compiled:libdates",
        "//src/geometry:rectangle",
    ],
)

sh_binary(
    name = "release_metadata",
    srcs = ["release_metadata.sh"],
)

config_setting(
    name = "sin",
    values = {"define": "sin=true"},
)

genrule(
    name = "math_maybe_patched",
    srcs = [
        "math.cc",
        "//patches:math.cc.sin.patch",
    ],
    outs = ["math_maybe_patched.cc"],
    cmd = select({
        ":sin": "cp $(location math.cc) $@ && patch $@ < $(location //patches:math.cc.sin.patch)",
        "//conditions:default": "cp $(location math.cc) $@",
    }),
    tools = [],
)

cc_binary(
    name = "math",
    srcs = [":math_maybe_patched"],
    deps = [
        "@gcem",
    ],
)

cc_binary(
    name = "math-arm64",
    srcs = ["math.cc"],
    deps = [
        "@gcem",
    ],
)

cc_binary(
    name = "genheader",
    srcs = ["genheader.cc"],
    deps = [
        "//generated:header-generated-lib",
    ],
)
