load("@rules_cc//cc:cc_library.bzl", "cc_library")

cc_library(
    name = "rectangle",
    srcs = ["rectangle.cc"],
    hdrs = ["include/rectangle.hpp"],
    # https://bazel.build/tutorials/cpp-use-cases#add-include-paths
    # show how to store headers in a separate directory to exercise copts;
    # with `copts = ["-Isrc/geometry/include"]`, no need for `strip_include_prefix`
    strip_include_prefix = "include",
    visibility = ["//visibility:public"],
)

cc_library(
    name = "circle",
    srcs = ["circle.cc"],
    hdrs = ["circle.hpp"],
    visibility = ["//visibility:public"],
)
