load("@rules_cc//cc:cc_test.bzl", "cc_test")

cc_test(
    name = "rectangle-gtest-test",
    srcs = ["rectangle_gtest_test.cc"],
    deps = [
        "//src/geometry:rectangle",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "rectangle-catch2-test",
    srcs = ["rectangle_catch2_test.cc"],
    deps = [
        "//src/geometry:rectangle",
        "@catch2//:catch2_main",
    ],
)
